syntax = "proto3";

import "common.proto";

package workflows;

service WorkflowsService {
    rpc Create (ICreateWorkflowDto) returns (ICreateWorkflowResponse) {}

    rpc Start (IStartWorkflowDto) returns (common.IEmptyResponse) {}

    rpc FindByDocumentId (IFindWorkflowByDocumentIdDto) returns (IFindWorkflowResponse) {}

    rpc Delete (IDeleteWorkflowDto) returns (common.IEmptyResponse) {}
}

message ICreateWorkflowDto {
    string userId = 1;

    string documentId = 2;
}

message IWorkflowResponseData {
    string id = 1;

    string creatorId = 2;

    string documentId = 3;

    string status = 4;

    optional string completedAt = 5;
}

message ICreateWorkflowResponse {
    oneof response {
        IWorkflowResponseData data = 1;

        common.IHttpError error = 2;
    }
}

message IStartWorkflowDto {
    string userId = 1;

    string workflowId = 2;
}

message IFindWorkflowByDocumentIdDto {
    string userId = 1;

    string documentId = 2;
}

message IFindWorkflowResponse {
    oneof response {
        IWorkflowResponseData data = 1;

        common.IHttpError error = 2;
    }
}

message IDeleteWorkflowDto {
    string userId = 1;

    string workflowId = 2;
}   